change name for publish to bower.io

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Retina.js</title>
+    <title>MT-Retina.js</title>
     <style type="text/css">
         body {
             font-family: Helvetica, arial, sans-serif;
@@ -466,7 +466,7 @@
 
     <div class="container">
         <section>
-            <img data-retina-url="./assets/images/test/retina.png" data-img-type="normal" data-img-lang="en" alt="">
+            <img data-retina-url="./assets/images/test/retina.png" data-img-type="normal" data-img-lang="zh" alt="">
         </section>
     </div>
     
